--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ build/**
 *.gch
 *.pch
 
-# Compiled Dynamic libraries
+# Compiled Dynamic library
 *.so
 *.dylib
 *.dll
@@ -34,7 +34,7 @@ build/**
 *.mod
 *.smod
 
-# Compiled Static libraries
+# Compiled Static library
 *.lai
 *.la
 *.a
