Renamed library to lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,15 +9,16 @@ add_executable(
 )
 
 target_include_directories(twamp PRIVATE ./include/)
-target_include_directories(twamp PRIVATE ./library/)
+target_include_directories(twamp PRIVATE lib/)
 
-add_subdirectory(library)
+add_compile_definitions(SPDLOG_DEBUG_ON)
+
+add_subdirectory(lib)
 target_link_libraries(twamp PRIVATE lib_impl)
 
-# spdlog library package and headers
+# spdlog lib package and headers
 find_package(spdlog REQUIRED)
 target_link_libraries(twamp PRIVATE spdlog::spdlog_header_only)
 #target_link_libraries(lcd_dht11 PRIVATE spdlog::spdlog $<$<BOOL:${MINGW}>:ws2_32>)
 
-add_compile_definitions(SPDLOG_DEBUG_ON)
 
