--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ build/**
 *.gch
 *.pch
 
-# Compiled Dynamic library
+# Compiled Dynamic lib
 *.so
 *.dylib
 *.dll
@@ -34,7 +34,7 @@ build/**
 *.mod
 *.smod
 
-# Compiled Static library
+# Compiled Static lib
 *.lai
 *.la
 *.a
