--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(
         ./network/server.cpp
         ./network/client.cpp
         ./network/messages.cpp
+        network/connected_client.cpp
 )
 
 target_include_directories(lib_impl PRIVATE ../include)
