Started to implement `Creating Test Sessions`

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -5,9 +5,9 @@ add_library(
         ./network/server.cpp
         ./network/client.cpp
         ./network/messages.cpp
-        network/connected_client.cpp
+        network/connected_client_worker.cpp
         utils/time_utils.cpp
-)
+        network/test_sessions/test_session.cpp network/test_sessions/test_session.h)
 
 target_include_directories(lib_impl PRIVATE ../include)
 target_include_directories(lib_impl PRIVATE .)
